package ressourcix.domain


import ressourcix.app.app.vacationIds
import ressourcix.gui.pages.calenderView
import ressourcix.gui.pages.calenderView.updateEmployees
import ressourcix.logger.logger
import ressourcix.essential.IdProvider

class EmployeeManagement () {
    val employees: MutableList<Employee> = mutableListOf()
    private val overlapList : MutableList<Int> = MutableList(52) { 0 }

    var maxOverlapsPerKw :Int = 5
    val year = 2026u

    fun listAll(): List<Employee> = employees.toList()

    fun add(employee: Employee) {
        employees.add(employee)
        updateEmployees()
    }

    fun removeById(id: UInt): Boolean {
        val idx = employees.indexOfFirst { it.getId() == id }
        if (idx == -1) return false
        employees.removeAt(idx)
        updateEmployees()
        return true
    }

    fun findById(id: UInt): Employee? = employees.firstOrNull { it.getId() == id }



    /**
     * Demo-Seed: 10 Mitarbeiter IDs 1..10.
     */
//    fun seed10Employees() {
//        employees.clear()
//        val ids = IdProvider(start = 1u)
//        val names = listOf(
//            "Max" to "Müller",
//            "Sara" to "Schmidt",
//            "Lena" to "Weber",
//            "Noah" to "Meier",
//            "Mia" to "Keller",
//            "Leo" to "Fischer",
//            "Emma" to "Brunner",
//            "Paul" to "Baumann",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Nina" to "Steiner",
//            "Tom" to "Hug"
//        )
//        for ((first, last) in names) {
//            val e = Employee(ids.generateId()).apply {
//                setFirstName(first)
//                setLastName(last)
//                setRole(Role.STAFF)
//                setWorkloadPercent(100u)
//            }
//            employees.add(e)
//        }
//    }

    fun allVacationInKwFiltern() {
        val allVacation = employees.flatMap { it.getVacationEntries() }

    }

    fun removeVacation(empId: UInt, startWeek: UInt, endWeek: UInt){
        employees[empId.toInt()-1].removeByStartWeek(startWeek)
    }

    fun addVacationSafe(employee: Employee, startWeek: UInt, endWeek: UInt, maxAllowed: Int = maxOverlapsPerKw) {
        // To Do Ferienliste erstelle aller Mitableitern mit Index 1 = KW1 = alle Mitarbeiterferien aufrufen in KW 1 etc.
        val empId = employee.getId()
        val entry = VacationEntry(
            id = vacationIds.generateId(),
            employeeId = empId,
            year = year,
            range = WeekRange(startWeek, endWeek),
            initialStatus = VacationStatus.REQUESTED
        )

        val currentOverlaps = countAllOverlaps()

        val conflictingEmployees = mutableSetOf<String>()

        employees.forEach { otherEmp ->
            if (otherEmp.getId() != employee.getId()) {
                otherEmp.getVacationEntries().forEach { otherEntry ->
                    if (entry.overlapsWith(otherEntry)) {
                        conflictingEmployees.add(otherEmp.getFullName())
                    }
                }
            }
        }

        // Anzahl Überschneidungen
        val newOverlapCount = conflictingEmployees.size
        // Prüfen, ob das Limit überschritten würde
        val totalOverlapsAfter = currentOverlaps + newOverlapCount

        val status = when {
            newOverlapCount == 0 -> OverlapStatus.OK
            totalOverlapsAfter < maxAllowed -> OverlapStatus.WARNING
            else -> OverlapStatus.CRITICAL
        }

        // Bei maxAllowed = 0: keine Überschneidung erlaubt (>=)
        // Bei maxAllowed > 0: maxAllowed Überschneidungen erlaubt (>)
        val limitExceeded = if (maxAllowed == 0) {
            totalOverlapsAfter >= 1
        } else {
            totalOverlapsAfter > maxAllowed
        }

        if (limitExceeded) {
            val names = conflictingEmployees.toList()
            val namesList = when {
                names.isEmpty() -> ""
                names.size == 1 -> names[0]
                names.size <= 3 -> names.joinToString(" und ")
                else -> "${names.take(3).joinToString(", ")} und ${names.size - 3} weitere(r)"
            }

//            val message = if (names.isEmpty()) {
//                "Überschneidung: Kein Ferieneintrag für ${employee.label()} (${employee.getFullName()}) möglich, da das Überschneidungslimit erreicht ist."
//            } else {
//                "Überschneidung: Kein Ferieneintrag für ${employee.label()} (${employee.getFullName()}) möglich, da die Ferien mit $namesList überlappen (Max. $maxAllowed erlaubt, danach wären es $totalOverlapsAfter)."
//            }
            val message = when (status) {
                OverlapStatus.OK ->
                    logger.info("Keine Überschneidung. Ferieneintrag für ${employee.label()} (${employee.getFullName()}) wurde hinzugefügt.")


                OverlapStatus.WARNING ->
                    logger.warn("WARNING: Ferieneintrag für ${employee.label()} (${employee.getFullName()}) überlappt mit $namesList. " +
                            "Aktuelle Überschneidungen: $totalOverlapsAfter von max. $maxAllowed erlaubt.")

                OverlapStatus.CRITICAL ->
                    logger.error("CRITICAL: Parametrierung der Ferieneintrage für ${employee.label()} (${employee.getFullName()}) überschritten. " +
                            "Überlappung mit $namesList würde das Limit überschreiten " +
                            "(Aktuell: $currentOverlaps, Neu: +$newOverlapCount, Total: $totalOverlapsAfter, Max: $maxAllowed).")
            }
            println(message)
        }
        employee.addVacationEntry(entry)
        Thread.sleep(10)
        updateOverlapList()
        calenderView.refreshVacations()
    }



    //Die FerienListe mit 52 Einträgen aus Employee wird bei jedem Employee durchgegangen

    fun updateOverlapList (){
        overlapList.replaceAll { 0 }
        for (i in 0 .. 51)
            for (e in 0 .. employees.size - 1){
                //overlapList[i] = 0
                overlapList[i] += employees[e].getVacationByIndex(i)
                //println(overlapList)
        }
        //println(overlapList)
    }


    fun VacationEntry.overlapsWith(other: VacationEntry): Boolean {
        // Nur überlappen wenn gleiches Jahr
        if (this.year != other.year) return false

        // Wochen-Überschneidung prüfen
        return this.range.overlaps(other.range)
    }

    fun countAllOverlaps(): Int {
        val allVacation = employees.flatMap { it.getVacationEntries() }
        var count = 0

        for (i in allVacation.indices) {
            for (j in i + 1 until allVacation.size) {
                if (allVacation[i].overlapsWith(allVacation[j])) {
                    count++
                }
            }
        }

        return count
    }

    fun getEmployeesInWeek(week: Int): List<Employee> {
        return employees.filter { emp ->
            emp.getVacationByIndex(week) == 1
        }
    }

    fun getEmployeeByIndex(index: Int): Employee = employees[index]

    fun getOverlapList(): List<Int> {
        updateOverlapList()
        return overlapList
    }


}

