package ressourcix.gui.navigation

enum class Route {
    DASHBOARD,
    CALENDER,
    EMPLOYEEMANAGEMENT,
    PARAMETER
}