@startuml
' ==========================================================
' Packages & Klassendiagramm
' ==========================================================

    class Employee {
        - id: UInt
        - firstName: String
        - lastName: String
        - workloadPercent: UByte
        - role: Role
        - Abbreviation: String
        - vacationEntries: MutableList<VacationEntry>
        - vacationList: MutableList<Int>
        + getId(): UInt
        + getFirstName(): String
        + getLastName(): String
        + getWorkloadPercent(): UByte
        + getRole(): Role
        + getVacationEntries(): List<VacationEntry>
        + getFullName(): String
        + abbreviationSting(): String
        + setFirstName(value: String)
        + setLastName(value: String)
        + setWorkloadPercent(value: UByte)
        + setRole(value: Role)
        + addVacationEntry(entry: VacationEntry)
        + createVacationList(entry: VacationEntry)
    }

    class EmployeeManagement {
        - employees: MutableList<Employee>
        + mitarbeiterVerwaltung(io: ConsoleIO, management: EmployeeManagement, employeeIds: IdProvider)
        + listAll(): List<Employee>
        + add(employee: Employee)
        + removeById(id: UInt): Boolean
        + findById(id: UInt): Employee?
        + seed10Employees()
        + allVacationInKwFiltern()
        + addVacationSafe(employee: Employee, entry: VacationEntry, maxAllowed: Int = 1): VacationAddResult
        + VacationEntry.overlapsWith(other: VacationEntry): Boolean
        + countAllOverlaps(): Int
        + getEmployeeByIndex(index: Int): Employee
    }

    class VacationEntry {
        - id: UInt
        - employeeId: UInt
        - year: UInt
        - range: WeekRange
        - statusByWeek: Map<UInt, VacationStatus>
        + hasWeek(week: UInt): Boolean
        + getStatus(week: UInt): VacationStatus?
        + setStatus(week: UInt, status: VacationStatus)
        + overlapsWith(other: VacationEntry): Boolean
        + toString(): String
    }

    class WeekRange {
        - startWeek: UInt
        - endWeek: UInt
        + contains(week: UInt): Boolean
        + overlaps(other: WeekRange): Boolean
    }

    class VacationAddResult {
        + success: Boolean
        + status: OverlapStatus
        + message: String
        + currentOverlaps: Int
        + newOverlaps: Int
        + totalOverlapsAfter: Int
        + maxAllowed: Int
        + remainingCapacity: Int
        + conflictingEmployees: List<String>
    }

    enum Role {
        APPRENTICE
        STAFF
        TEAM_LEAD
        MANAGER
    }

    enum VacationStatus {
        REQUESTED
        APPROVED
        GENERATED
        REJECTED
        CANCELLED
        + code: String
    }

    enum OverlapStatus {
        OK
        WARNING
        CRITICAL
        + getColor(): String
        + getIcon(): String
    }






    object app {
        + io: ConsoleIO
        + management: EmployeeManagement
        + employees: List<Employee>
        - employeeIds: IdProvider
        + vacationIds: IdProvider
        + run()
    }



    class IdProvider {
        - start: UInt
        - nextId: UInt
        - id: UInt
        - issuedIds: Set<UInt>
        + generateId(): UInt
        + Issued(id: UInt): Boolean
    }



    class ConsoleIO {
        + println(msg: String = "")
        + print(msg: String)
        + readTrimmed(): String
        + readUInt(prompt: String, min: UInt?, max: UInt?): UInt?
        + readNonBlank(prompt: String): String?
        + readChoice(prompt: String = "Auswahl: "): Int
    }

    enum MessageType {
        INFO
        WARNING
        ERROR
    }

    interface UserInterface {
        + showMessage(msg: String, type: TrayIcon.MessageType = TrayIcon.MessageType.INFO)
        + readLine(prompt: String = ""): String?
        + readChoice(prompt: String = ""): Int
        + printMainMenu(year: Int)
    }




    class GuiBorderPane <<Application>> {
        + start(stage: Stage)
        + exit()
    }

    object bottomBar {
        + getView(): Node
    }

    object topNavigationBar {
        + getView(): Node
        + bind(router: NavigationsController)
    }

    class NavigationsController {
        - root: BorderPane
        + navigate(route: Route)
    }

    object dashboardView {
        + updateBarChart()
        + getView(): Node
    }

    object calenderView {
        - tableView: TableView<Employee>
        - weekCodeCache: Map<UInt, Array<String>>
        - currentYear: UInt
        + showYear(year: UInt, weeks: UInt = 52u)
        + refreshVacations()
        + updateEmployees()
        - onEmployeeDoubleClick(employee: Employee)
        - showVacationResultAlert(result: VacationAddResult)
        - showVacationResultDialog(result: VacationAddResult)
        + showSimplePopup(title: String, header: String?, message: String, type: Alert.AlertType)
    }

    class EmployeeManagementView {
        + getView(): Node
    }

    object parameterview {
        + getView(): Node
    }

    object calendarPopUp {
        + show(): VacationData?
    }

    object filterPopUp {
        + show(): FilterData?
    }

    object vacationPopUp {
        + show(): VacationData?
    }

    class FerienantragKwPopup {
        + empId: UInt
        + show(): VacationData?
    }

    enum Route {
        DASHBOARD
        CALENDER
        EMPLOYEEMANAGEMENT
        PARAMETER
    }



    class MainMenu {
        + init(io: ConsoleIO, management: EmployeeManagement,\n               employeeIds: IdProvider, vacationIds: IdProvider)
        + loop()
        - printMainMenu()
        - rateSingleWeek()
    }


' ==========================================================
' Relationships
' ==========================================================

' Domain Relationships
Employee "1" *-- "*" VacationEntry : has >
EmployeeManagement "1" *-- "*" Employee : verwaltet >
EmployeeManagement ..> VacationAddResult : returns >
VacationEntry --> WeekRange : contains >
VacationEntry --> VacationStatus : has >
VacationAddResult --> OverlapStatus : has >
VacationAddResult --> Employee : refers to >

' App Relationships
app "1" --> "1" EmployeeManagement : uses >
app "1" --> "*" Employee : uses >
app "1" --> "2" IdProvider : uses >

' Calendar Relationships
consoleCalendarOutput --> EmployeeManagement : uses >
consoleCalendarOutput ..> VacationAddResult : returns >

' GUI Relationships
GuiBorderPane --> topNavigationBar : uses >
GuiBorderPane --> bottomBar : uses >
GuiBorderPane --> NavigationsController : uses >
NavigationsController --> Route : navigates >
topNavigationBar --> Route : triggers >

' GUI to App/Domain
calenderView --> app : uses >
calenderView --> consoleCalendarOutput : calls >
calenderView ..> VacationAddResult : displays >
calenderView --> FerienantragKwPopup : shows >
dashboardView --> app : uses >
dashboardView --> consoleCalendarOutput : uses >
EmployeeManagementView --> app : uses >

' UI Menu Relationships
MainMenu --> ConsoleIO : uses >
MainMenu --> EmployeeManagement : uses >
MainMenu --> IdProvider : uses >
ConsoleIO <-- EmployeeManagement : uses >

' Vacation Planner
vacationPlanner --> Employee : generates for >
vacationPlanner --> VacationEntry : creates >
vacationPlanner ..> VacationAddResult : receives >

@enduml